WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268372
Crash in fast/canvas/webgl/tex-image-and-uniform-binding test
https://bugs.webkit.org/show_bug.cgi?id=268372
Summary
Crash in fast/canvas/webgl/tex-image-and-uniform-binding test
Jean-Yves Avenard [:jya]
Reported
2024-01-30 03:43:40 PST
Seen in EWS test
https://ews-build.s3-us-west-2.amazonaws.com/iOS-17-Simulator-WK2-Tests-EWS/b2e2d3ee-13060/fast/canvas/webgl/tex-image-and-uniform-binding-bugs-crash-log.txt
``` Thread 6 Crashed:: Dispatch queue: VideoPlaybackQualityMetrics 0 libobjc.A.dylib 0x103657828 objc_msgSend + 40 1 libobjc.A.dylib 0x10367bb5c -[NSObject respondsToSelector:] + 32 /Library/Caches/com.apple.xbs/Sources/objc4_Sim/runtime/NSObject.mm:2475 2 com.apple.WebCore 0x11e2601fc WebCore::MediaPlayerPrivateAVFoundationObjC::videoPlaybackQualityMetrics() 3 com.apple.WebCore 0x11fe60f9c WebCore::MediaPlayerPrivateInterface::asyncVideoPlaybackQualityMetrics() 4 com.apple.WebCore 0x11e265eb0 WTF::Detail::CallableWrapper<auto WTF::invokeAsync<WebCore::MediaPlayerPrivateAVFoundationObjC::asyncVideoPlaybackQualityMetrics()::$_3>(WTF::SerialFunctionDispatcher&, WebCore::MediaPlayerPrivateAVFoundationObjC::asyncVideoPlaybackQualityMetrics()::$_3&&, WTF::Logger::LogSiteIdentifier const&)::'lambda'(), void>::call() 5 com.apple.JavaScriptCore 0x115ff4520 void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 6 libdispatch.dylib 0x105807d3c _dispatch_client_callout + 16 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/object.m:561 7 libdispatch.dylib 0x10580fe3c _dispatch_continuation_invoke_inline + 148 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/inline_internal.h:2640 [inlined] 8 libdispatch.dylib 0x10580fe3c _dispatch_continuation_pop_inline + 148 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/inline_internal.h:2688 [inlined] 9 libdispatch.dylib 0x10580fe3c _dispatch_lane_drain + 928 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/queue.c:3839 [inlined] 10 libdispatch.dylib 0x10580fe3c _dispatch_lane_serial_drain + 960 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/queue.c:3885 11 libdispatch.dylib 0x1058109b4 _dispatch_lane_invoke2 + 52 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/queue.c:3966 [inlined] 12 libdispatch.dylib 0x1058109b4 _dispatch_queue_class_invoke + 344 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/inline_internal.h:1936 [inlined] 13 libdispatch.dylib 0x1058109b4 _dispatch_lane_invoke + 388 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/queue.c:3976 14 libdispatch.dylib 0x10581bd40 _dispatch_root_queue_drain_deferred_wlh + 276 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/queue.c:6913 15 libdispatch.dylib 0x10581b38c _dispatch_wlh_worker_thread + 272 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/queue.c:6442 [inlined] 16 libdispatch.dylib 0x10581b38c _dispatch_workloop_worker_thread + 448 /Library/Caches/com.apple.xbs/Sources/libdispatch_Sim/src/queue.c:6507 17 libsystem_pthread.dylib 0x105b47924 _pthread_wqthread + 284 /AppleInternal/Library/BuildRoots/98ed8ad3-3356-11ee-9b53-aead88ae2785/Library/Caches/com.apple.xbs/Sources/libpthread/src/pthread.c:2629 18 libsystem_pthread.dylib 0x105b466e4 start_wqthread + 8 ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-30 03:43:55 PST
<
rdar://problem/121921205
>
Jean-Yves Avenard [:jya]
Comment 2
2024-01-30 04:14:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23504
EWS
Comment 3
2024-01-30 13:56:50 PST
Committed
273785@main
(0ac4c71a6f85): <
https://commits.webkit.org/273785@main
> Reviewed commits have been landed. Closing PR #23504 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug