Crash in fast/canvas/webgl/tex-image-and-uniform-binding test https://bugs.webkit.org/show_bug.cgi?id=268372 rdar://121921205

Reviewed by Youenn Fablet.

It was possible for m_videoLayer to be set to zero before we accessed it in the VideoPlaybackQualityMetrics WorkQueue.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createVideoLayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayerLayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::destroyVideoLayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::platformSetVisible):
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateVideoLayerGravity):
(WebCore::MediaPlayerPrivateAVFoundationObjC::videoPlaybackQualityMetrics):
(WebCore::MediaPlayerPrivateAVFoundationObjC::videoPlaybackQualityMetrics const):
(WebCore::MediaPlayerPrivateAVFoundationObjC::asyncVideoPlaybackQualityMetrics):
(WebCore::MediaPlayerPrivateAVFoundationObjC::setShouldDisableHDR):

Canonical link: https://commits.webkit.org/273785@main